added some styling

--- a/01-starting-project-angular/src/app/app.component.html
+++ b/01-starting-project-angular/src/app/app.component.html
@@ -1,2 +1,10 @@
 <!-- This is the markup in the app.component.ts file -->
-<app-header></app-header>
+<app-header /> <!-- write self-closing tags if there's nothing within the tags. -->
+
+<main>
+  <ul id="users">
+    <li>
+      <app-user />
+    </li>
+  </ul>
+</main>
