--- a/01-starting-project-angular/src/app/user/user.component.html
+++ b/01-starting-project-angular/src/app/user/user.component.html
@@ -1,6 +1,9 @@
 <div>
   <button>
-    <img />
-    <span>NAME</span>
+    <img
+    [src]=" 'assets/users/' + selectedUser.avatar"
+    [alt]="selectedUser.name"
+    />
+    <span>{{ selectedUser.name }}</span> <!-- using string interpolation; this allows us to REFERENCE any public property in our component class. Output: we can now recieve random names from the users folder! -->
   </button>
 </div>
