--- a/01-starting-project-angular/src/app/user/user.component.html
+++ b/01-starting-project-angular/src/app/user/user.component.html
@@ -1,7 +1,7 @@
 <div>
   <button>
     <img
-    [src]=" 'assets/users/' + selectedUser.avatar"
+    [src]=" './assets/users/' + selectedUser.avatar"
     [alt]="selectedUser.name"
     />
     <span>{{ selectedUser.name }}</span> <!-- using string interpolation; this allows us to REFERENCE any public property in our component class. Output: we can now recieve random names from the users folder! -->
